--- a/EnLock-Web/styles/styles.css
+++ b/EnLock-Web/styles/styles.css
@@ -29,7 +29,6 @@ html {
     width: 90px;
 }
 .topbar ul li{
-    float: ;
     padding-right: 20px;
     display: inline-block;
 }
@@ -43,24 +42,27 @@ html {
 }
 
 .home-background-main{
-    background-image: url("../resources/background-home.jpg");
+    background-image: url("../resources/city.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: 100%;
     text-align: center;
     height: 800px;
+    
 }
 .home-background-main h1{
     padding-top: 320px;
-    color: black;
+    color: white;
     text-align: center;
     font-family: Montserrat,Helvetica,Arial;
     font-size: 55px;
     font-weight: 600;
     letter-spacing: 2px;
+    animation: expandh1;
+    animation-duration: 2s;
 }
 .home-background-main h2{
-    color: black;
+    color: white;
     text-align: center;
     font-family: Montserrat,Helvetica,Arial;
     font-size: 30px;
@@ -127,4 +129,12 @@ body{
 }
 .col-xl:last-child{
     background-color: #f0efef !important;
+}
+@keyframes expandh1{
+    0%{font-size: 0px;}
+    100%{font-size: 55px;}
+}
+@keyframes expandh2{
+    0%{font-size: 0px;}
+    100%{font-size: 30px;}
 }
