--- a/EnLock-Web/styles/secondarystyles.css
+++ b/EnLock-Web/styles/secondarystyles.css
@@ -222,9 +222,76 @@ hr{
     width: 30%;
 
 }
+.im-interested{
+    margin-left: 37%;
+    margin-top: 10px;
+    padding-bottom: 30px;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+}
+.share-button {
+    text-align: center;
+    width: 280px;
+    height: 80px;
+    background: #dfe6e9;
+    border-radius: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0 50px;
+    overflow: hidden;
+    position: relative;
+    cursor: pointer;
+    transition: .3s linear;
+  }
+  .share-button:hover{
+    transform: scale(1.1);
+  }
+  .share-button span{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: #2d3436;
+    color: #f1f1f1;
+    text-align: center;
+    line-height: 80px;
+    z-index: 999;
+    transition: .2s linear;
+    border-radius: 40px;
+   
+  }
+  .share-button:hover span{
+    transform: translateX(-100%);
+    transition-delay: .1s;
+  }
+  .share-button a {
+    flex: 1;
+    font-size: 20px;
+    color: #2d3436;
+    text-align: center;
+    transform: translateX(-100%);
+    opacity: 0;
+    transition: .3s linear;
+  }
+  .share-button:hover a {
+      text-decoration: none;
+    opacity: 1;
+    transform: translateX(0);
+  }
+  .share-button a:nth-of-type(1){
+    transition-delay: 0.1s;
   
+  }
+  .overlay-container{
+      background-color: rgb(240, 240, 240);
+  }
+  .row:first-of-type{
+      padding-top: 30px;
+    margin-top: 0px;
+  }
 @keyframes breath {
     0%   { width: 100% auto; }
     50% { width: 110% auto; }
     100% { width: 100% auto; }
-  }
+}
