--- a/EnLock-Web/styles/secondarystyles.css
+++ b/EnLock-Web/styles/secondarystyles.css
@@ -8,6 +8,21 @@ footer{
     color: white;
     height: 150px;
 }
+  /* Style the submit button with a specific background color etc */
+  input[type=submit] {
+    background-color: salmon;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+  
+  /* When moving the mouse over the submit button, add a darker green color */
+  input[type=submit]:hover {
+    background-color: rgb(252, 113, 97);
+  }
+  
 .Services i{
     width: 100%;
     text-align: center;
