--- a/EnLock-Web/styles/styles.css
+++ b/EnLock-Web/styles/styles.css
@@ -22,9 +22,11 @@ footer{
     padding-bottom: 20px;
     margin-bottom: 0px;
 }
-html {
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
     scroll-behavior: smooth;
-  }
+}
 .top{
     background: rgb(2,0,36);
     background: linear-gradient(0deg, rgba(2,0,36,0) 0%, rgba(9,9,121,0) 18%, rgba(0,0,0,1) 100%);
