--- a/EnLock-Web/styles/secondarystyles.css
+++ b/EnLock-Web/styles/secondarystyles.css
@@ -2,11 +2,24 @@
     --secondary-purple: #b395ba;
     --primary-salmon: salmon;
 }
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+    scroll-behavior: smooth;
+}
 footer{
     width: 100%;
-    background-color: Black;
+    background-color: black;
     color: white;
     height: 150px;
+}
+footer a{
+    text-decoration: none;
+    color: white;
+}
+footer a:hover{
+    text-decoration: none;
+    color: rgb(209, 209, 209);
 }
   /* Style the submit button with a specific background color etc */
   input[type=submit] {
