--- a/EnLock-Web/styles/styles.css
+++ b/EnLock-Web/styles/styles.css
@@ -10,6 +10,14 @@ footer{
     color: white;
     height: 150px;
 }
+footer a{
+    text-decoration: none;
+    color: white;
+}
+footer a:hover{
+    text-decoration: none;
+    color: rgb(209, 209, 209);
+}
 .bio{
     padding: 10px;
     color: white;
@@ -218,8 +226,6 @@ hr{
     height: 700px;
     background-color: var(--secondary-purple);
     margin: 0px 0px 0px 0px;
-}
-.about-Enlock-Home-text{
 }
 .about-Enlock-Home h1{
     color: white;
