--- a/EnLock-Web/styles/secondarystyles.css
+++ b/EnLock-Web/styles/secondarystyles.css
@@ -1,5 +1,6 @@
 :root{
     --secondary-purple: #b395ba;
+    --secondary-purple-hover: #927997;
     --primary-salmon: salmon;
 }
 html, body {
@@ -54,6 +55,12 @@ footer a:hover{
 }
 .Services-Banner{
     width: 100%;
+}
+.services-button{
+    color: var(--secondary-purple);
+}
+.services-button:hover{
+    color: var(--secondary-purple-hover);
 }
 .top{
     background: rgb(2,0,36);
@@ -262,7 +269,7 @@ hr{
     text-align: center;
     width: 280px;
     height: 80px;
-    background: #dfe6e9;
+    background: rgb(221, 221, 221);
     border-radius: 40px;
     display: flex;
     align-items: center;
@@ -280,7 +287,7 @@ hr{
     position: absolute;
     width: 100%;
     height: 100%;
-    background: #2d3436;
+    background: rgb(39, 39, 39);
     color: #f1f1f1;
     text-align: center;
     line-height: 80px;
