--- a/EnLock-Web/styles/secondarystyles.css
+++ b/EnLock-Web/styles/secondarystyles.css
@@ -1,7 +1,7 @@
 :root{
     --secondary-purple: #b395ba;
     --secondary-purple-hover: #927997;
-    --primary-salmon: salmon;
+    --primary-salmon: #fa8072;
 }
 html, body {
     max-width: 100%;
@@ -54,6 +54,7 @@ footer a:hover{
     color: var(--primary-salmon);
 }
 .Services-Banner{
+    z-index: -999;
     width: 100%;
 }
 .services-button{
@@ -63,21 +64,22 @@ footer a:hover{
     color: var(--secondary-purple-hover);
 }
 .top{
-    background: rgb(2,0,36);
+    z-index: 999;
+    position: absolute;
     width: 100%;
-    background-color: black;
+    background-color: transparent;
 }
 .topbar-container{
-    background-color: black;
+    background-color: transparent;
 }
 .topbar-rightContainer{
-    background-color: black;
+    background-color: transparent;
     right: 150px;
     position: absolute;
     float: right;
 }
 .topbar{
-    background-color: black;
+    background-color: transparent;
     height: 100px;
     z-index: 2;
     width: 100%;
