--- a/EnLock-Web/styles/secondarystyles.css
+++ b/EnLock-Web/styles/secondarystyles.css
@@ -12,7 +12,7 @@ footer{
     width: 100%;
     background-color: black;
     color: white;
-    height: 150px;
+    padding-bottom: 50px;
 }
 footer a{
     text-decoration: none;
