--- a/EnLock-Web/styles/styles.css
+++ b/EnLock-Web/styles/styles.css
@@ -8,7 +8,7 @@ footer{
     width: 100%;
     background-color: black;
     color: white;
-    height: 150px;
+    padding-bottom: 50px;
 }
 footer a{
     text-decoration: none;
